--- a/textCleaning.ipynb
+++ b/textCleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "ef5ffdd0",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "301fbec0",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
        "freq                                                    5     25000"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "e833b9b0",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "c5a24817",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "bbf7fcb5",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "da140d47",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "'wonderful little production filming technique unassuming oldtimebbc fashion give comforting sometimes discomforting sense realism entire piece actor extremely well chosen michael sheen got polari voice pat truly see seamless editing guided reference williams diary entry well worth watching terrificly written performed piece masterful production one great master comedy life realism really come home little thing fantasy guard rather use traditional dream technique remains solid disappears play knowledge sens particularly scene concerning orton halliwell set particularly flat halliwells mural decorating every surface terribly well done'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "3291a8bd",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
        "Name: review, Length: 50000, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "fc13106e",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
        "Name: sentiment, Length: 50000, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "fb9c0fb5",
    "metadata": {},
    "outputs": [],
@@ -260,9 +260,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "379c584e",
+   "metadata": {},
+   "source": [
+    "## Text Vectorization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d68a9f8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.layers import TextVectorization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "05ab635a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocabSize = 20000\n",
+    "maxLen = 200\n",
+    "vectorizeLayer = TextVectorization(\n",
+    "    max_tokens = vocabSize,\n",
+    "    output_mode = 'int',\n",
+    "    output_sequence_length = maxLen\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b5932336",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Building vocabulary since there's non in the dataset\n",
+    "vectorizeLayer.adapt(X_train)\n",
+    "\n",
+    "vectorizedTrainingSet = vectorizeLayer(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c5d46f21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'movie came went theater due nature see wasnt well received unfairly panned subject matter actual film higher learning spectacular good film tried talk feared subject america racismplotstory higher learning mostly centered around malikplayed omar epps naive track star deal fast enough stern professorplayed laurence fishburne befriends fudgeice cube well gorgeous lady named dejatyra bank later end deal skinhead campus remyplay michael rapaport confused kid end befriending local skinhead campus impose view becomes racist areopinion higher learning without flaw character development scarce okay performance omar epps tyra bank leader skinheadswhose name forgot busta rhyme doesnt fit movie plus woman turning gay abused men cliché film know didnt like part film kristy swanson movie wasnt half bad laurence fishburne good professor phippseven though could without accent fudge ice cube best performance michael rapaport good confused remy one john singleton best movie one one reason frown rubbish put cinema need movie like higher learning mississippi burning american history x less movie like baby boy 2 fast 2 furious pointless remake shaft'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.to_list()[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "624e0b44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(200,), dtype=int64, numpy=\n",
+       "array([    2,   276,   307,   501,   551,   809,    14,   192,    18,\n",
+       "        1795, 10041,  9284,   576,   340,   656,     3,  1745,  2587,\n",
+       "        1903,     7,     3,   644,   452,  7941,   576,   724,     1,\n",
+       "        1745,  2587,   541,  5124,    99,     1,  7509, 10125,  2356,\n",
+       "         979,   108,   482,   746,   101,  7055,     1,  5543,  7172,\n",
+       "        5127,     1,  4577,    18,  1399,   479,   651,     1,  1656,\n",
+       "         212,    45,   482, 19678,  5565,     1,   382, 18937,  1294,\n",
+       "         133,    45,     1,   508, 19678,  5565, 14418,   457,   358,\n",
+       "        2637,     1,  1745,  2587,   115,  1002,     8,   791, 15164,\n",
+       "         727,    70,  7509, 10125, 10976,  1656,  1373,     1,   226,\n",
+       "        2323,     1,  6405,    67,   693,     2,   798,    72,  1462,\n",
+       "         714,  4557,   244,  1503,     3,    33,    69,     5,    56,\n",
+       "           3, 14847,  7777,     2,   192,   253,    21,  5543,  7172,\n",
+       "           7,  2023,     1,    73,    30,   115,   776, 17046,  1980,\n",
+       "        4577,    46,    70,   382, 18937,     7,  1294,     1,     4,\n",
+       "         213, 13190,    46,     2,     4,     4,   146, 18417,  1809,\n",
+       "         147,   329,   164,     2,     5,  1745,  2587, 11274,  3183,\n",
+       "         175,   394,  2706,   252,     2,     5,   743,   207,   209,\n",
+       "         746,   209,  5381,  1014,   801,  8478,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0], dtype=int64)>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorizedTrainingSet[2,:]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "379c584e",
+   "id": "8eae478a",
    "metadata": {},
    "outputs": [],
    "source": []
