created LSTM model 09/05

--- a/textCleaning.ipynb
+++ b/textCleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "ef5ffdd0",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "301fbec0",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
        "freq                                                    5     25000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "e833b9b0",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "c5a24817",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "bbf7fcb5",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "da140d47",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "'wonderful little production filming technique unassuming oldtimebbc fashion give comforting sometimes discomforting sense realism entire piece actor extremely well chosen michael sheen got polari voice pat truly see seamless editing guided reference williams diary entry well worth watching terrificly written performed piece masterful production one great master comedy life realism really come home little thing fantasy guard rather use traditional dream technique remains solid disappears play knowledge sens particularly scene concerning orton halliwell set particularly flat halliwells mural decorating every surface terribly well done'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "3291a8bd",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
        "Name: review, Length: 50000, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "fc13106e",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
        "Name: sentiment, Length: 50000, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "fb9c0fb5",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "d68a9f8f",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "id": "05ab635a",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "id": "b5932336",
    "metadata": {},
    "outputs": [],
@@ -308,17 +308,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "id": "c5d46f21",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'movie came went theater due nature see wasnt well received unfairly panned subject matter actual film higher learning spectacular good film tried talk feared subject america racismplotstory higher learning mostly centered around malikplayed omar epps naive track star deal fast enough stern professorplayed laurence fishburne befriends fudgeice cube well gorgeous lady named dejatyra bank later end deal skinhead campus remyplay michael rapaport confused kid end befriending local skinhead campus impose view becomes racist areopinion higher learning without flaw character development scarce okay performance omar epps tyra bank leader skinheadswhose name forgot busta rhyme doesnt fit movie plus woman turning gay abused men cliché film know didnt like part film kristy swanson movie wasnt half bad laurence fishburne good professor phippseven though could without accent fudge ice cube best performance michael rapaport good confused remy one john singleton best movie one one reason frown rubbish put cinema need movie like higher learning mississippi burning american history x less movie like baby boy 2 fast 2 furious pointless remake shaft'"
+       "'first thing first movie achingly beautiful someone work 3d cg film lightercompositor visuals blew away every second stunned screen story well okay going set world fire like futuristic blade runneresquire tale doesnt finei say felt voice acting particularly bland detracted movie whole saw cinema english hoping french version floating around somewheredefinitely worth seeing'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "id": "624e0b44",
    "metadata": {},
    "outputs": [
@@ -337,32 +337,32 @@
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(200,), dtype=int64, numpy=\n",
-       "array([    2,   276,   307,   501,   551,   809,    14,   192,    18,\n",
-       "        1795, 10041,  9284,   576,   340,   656,     3,  1745,  2587,\n",
-       "        1903,     7,     3,   644,   452,  7941,   576,   724,     1,\n",
-       "        1745,  2587,   541,  5124,    99,     1,  7509, 10125,  2356,\n",
-       "         979,   108,   482,   746,   101,  7055,     1,  5543,  7172,\n",
-       "        5127,     1,  4577,    18,  1399,   479,   651,     1,  1656,\n",
-       "         212,    45,   482, 19678,  5565,     1,   382, 18937,  1294,\n",
-       "         133,    45,     1,   508, 19678,  5565, 14418,   457,   358,\n",
-       "        2637,     1,  1745,  2587,   115,  1002,     8,   791, 15164,\n",
-       "         727,    70,  7509, 10125, 10976,  1656,  1373,     1,   226,\n",
-       "        2323,     1,  6405,    67,   693,     2,   798,    72,  1462,\n",
-       "         714,  4557,   244,  1503,     3,    33,    69,     5,    56,\n",
-       "           3, 14847,  7777,     2,   192,   253,    21,  5543,  7172,\n",
-       "           7,  2023,     1,    73,    30,   115,   776, 17046,  1980,\n",
-       "        4577,    46,    70,   382, 18937,     7,  1294,     1,     4,\n",
-       "         213, 13190,    46,     2,     4,     4,   146, 18417,  1809,\n",
-       "         147,   329,   164,     2,     5,  1745,  2587, 11274,  3183,\n",
-       "         175,   394,  2706,   252,     2,     5,   743,   207,   209,\n",
-       "         746,   209,  5381,  1014,   801,  8478,     0,     0,     0,\n",
+       "array([   23,    27,    23,     2, 13480,   211,   179,    55,  3949,\n",
+       "        4310,     3,     1,  1866,  3729,   154,    82,   204,  4572,\n",
+       "         187,    11,    18,   726,    77,   128,    89,   761,     5,\n",
+       "        4140,  2812,     1,   576,    68,     1,    40,   325,   405,\n",
+       "          44,   472,  1757, 14560,     2,   129,   116,   332,   521,\n",
+       "        1206,   584,   196,  3909,    96,     1,   184,   213,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
        "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
        "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
        "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
        "           0,     0], dtype=int64)>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,8 +373,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "8eae478a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.layers import Embedding\n",
+    "\n",
+    "embed = Embedding(\n",
+    "    input_dim = vocabSize,\n",
+    "    output_dim = 100,\n",
+    "    \n",
+    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "7456ee83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(200,), dtype=int64, numpy=\n",
+       "array([   23,    27,    23,     2, 13480,   211,   179,    55,  3949,\n",
+       "        4310,     3,     1,  1866,  3729,   154,    82,   204,  4572,\n",
+       "         187,    11,    18,   726,    77,   128,    89,   761,     5,\n",
+       "        4140,  2812,     1,   576,    68,     1,    40,   325,   405,\n",
+       "          44,   472,  1757, 14560,     2,   129,   116,   332,   521,\n",
+       "        1206,   584,   196,  3909,    96,     1,   184,   213,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "           0,     0], dtype=int64)>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorizedTrainingSet[2,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "165a51fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(200, 100), dtype=float32, numpy=\n",
+       "array([[-0.01717552,  0.03517122, -0.0231637 , ..., -0.02296155,\n",
+       "         0.01240039, -0.02624132],\n",
+       "       [-0.01822238, -0.0128541 ,  0.04156313, ..., -0.02275989,\n",
+       "         0.0179451 , -0.02814208],\n",
+       "       [-0.01717552,  0.03517122, -0.0231637 , ..., -0.02296155,\n",
+       "         0.01240039, -0.02624132],\n",
+       "       ...,\n",
+       "       [ 0.01921555,  0.03018453,  0.00447141, ...,  0.01050133,\n",
+       "        -0.0328871 , -0.03372177],\n",
+       "       [ 0.01921555,  0.03018453,  0.00447141, ...,  0.01050133,\n",
+       "        -0.0328871 , -0.03372177],\n",
+       "       [ 0.01921555,  0.03018453,  0.00447141, ...,  0.01050133,\n",
+       "        -0.0328871 , -0.03372177]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embed(vectorizedTrainingSet[2,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "8aed2918",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.layers.preprocessing.text_vectorization.TextVectorization at 0x1ecf0cda350>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorizeLayer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "286976db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.layers import LSTM, Dense, Dropout\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras import Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "01381447",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_3\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " text_vectorization_4 (TextV  (None, 200)              0         \n",
+      " ectorization)                                                   \n",
+      "                                                                 \n",
+      " embedding (Embedding)       (None, 200, 100)          2000000   \n",
+      "                                                                 \n",
+      " lstm_2 (LSTM)               (None, 100)               80400     \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 64)                6464      \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 64)                0         \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 1)                 65        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 2,086,929\n",
+      "Trainable params: 2,086,929\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Sequential()\n",
+    "model.add(Input(shape=(1,), dtype=tf.string))\n",
+    "model.add(vectorizeLayer)\n",
+    "model.add(embed)\n",
+    "model.add(LSTM(100))\n",
+    "model.add(Dense(64, activation = 'relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(1, activation = 'sigmoid'))\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "4c0e383b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer=tf.keras.optimizers.legacy.Adam(learning_rate=0.001), loss='binary_crossentropy', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8095ba4",
    "metadata": {},
    "outputs": [],
    "source": []
